--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,50 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ac878f">  <td>22/09/24 10:49:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Test.getXpath()[pri:0, instance:com.testing.testNG.tests.Login_Test@7f3b84b8]">&gt;&gt;getXpath</td> 
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest_DataProvi.doAssert()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&lt;&lt;doAssert</td> 
 <td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="ac878f">  <td>22/09/24 10:49:15</td>   <td>56</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Test.doLogin()[pri:0, instance:com.testing.testNG.tests.Login_Test@7f3b84b8]">doLogin</td> 
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest_DataProvi.doLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">doLogin</td> 
   <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="9e94bf">  <td>22/09/24 10:49:17</td>   <td>1326</td> <td title="&lt;&lt;Base_Integration.tearDown()[pri:0, instance:com.testing.testNG.tests.Login_Test@7f3b84b8]">&lt;&lt;tearDown</td> 
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest_DataProvi.getXpath()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&gt;&gt;getXpath</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="7677d1">  <td>22/09/24 15:53:30</td>   <td>-7380</td> <td title="&gt;&gt;BaseInte_DataProvi.doSetUp()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&gt;&gt;doSetUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="9e94bf">  <td>22/09/24 10:49:12</td>   <td>-3316</td> <td title="&gt;&gt;Base_Integration.doSetUp()[pri:0, instance:com.testing.testNG.tests.Login_Test@7f3b84b8]">&gt;&gt;doSetUp</td> 
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest_DataProvi.doAssert()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&lt;&lt;doAssert</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest_DataProvi.getXpath()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&gt;&gt;getXpath</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest_DataProvi.doLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">doLogin</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest_DataProvi.doLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">doLogin</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest_DataProvi.doAssert()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&lt;&lt;doAssert</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest_DataProvi.doAssert()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&lt;&lt;doAssert</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest_DataProvi.doAssert()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&lt;&lt;doAssert</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest_DataProvi.getXpath()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&gt;&gt;getXpath</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest_DataProvi.doLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">doLogin</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest_DataProvi.doLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">doLogin</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest_DataProvi.getXpath()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&gt;&gt;getXpath</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest_DataProvi.doAssert()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&lt;&lt;doAssert</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest_DataProvi.getXpath()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&gt;&gt;getXpath</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="7677d1">  <td>22/09/24 15:53:37</td>   <td>52</td> <td title="&lt;&lt;BaseInte_DataProvi.tearDown()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
-<tr bgcolor="ac878f">  <td>22/09/24 10:49:17</td>   <td>1283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login_Test.doAssert()[pri:0, instance:com.testing.testNG.tests.Login_Test@7f3b84b8]">&lt;&lt;doAssert</td> 
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest_DataProvi.getXpath()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&gt;&gt;getXpath</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest_DataProvi.doLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">doLogin</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3395</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest_DataProvi.doLogin(java.lang.String,java.lang.String,java.lang.String)[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">doLogin</td> 
+  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:34</td>   <td>-3457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest_DataProvi.getXpath()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&gt;&gt;getXpath</td> 
+<td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
+<tr bgcolor="b1776b">  <td>22/09/24 15:53:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest_DataProvi.doAssert()[pri:0, instance:com.testing.testNG.tests.LoginTest_DataProvi@34a3d150]">&lt;&lt;doAssert</td> 
 <td>&nbsp;</td>  <td>main@1510467688</td>   <td></td> </tr>
 </table>
