--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,6 +4,36 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
+<td>com.testing.testNG.tests.RegisterClass</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>doTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>getXpath</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>doAssert</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
 <td>com.testing.testNG.tests.LoginTest_DataProvi</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
